# John_Android_Player

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/john/johnplayer/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  JQueue.cpp  JQueue.h  MediaCore.cpp  MediaCore.h  SLAudio.cpp  SLAudio.h  native-lib.cpp
app/src/main/java/com/john/johnplayer/: MainActivity.java  MediaPlayer.java  Permission.java
app/src/main/jniLibs/arm64-v8a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/jniLibs/armeabi-v7a/pkgconfig/: libavcodec.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libswresample.pc  libswscale.pc
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/john/johnplayer/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
